# bridgio

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: app.rs  clipboard.rs  context.rs  error.rs  event.rs  main.rs  models.rs  persist.rs
src/aws/: config.rs  mod.rs  sns.rs  sqs.rs
src/ui/: dep_map.rs  header.rs  help.rs  mod.rs  picker.rs  sns_detail.rs  sns_list.rs  sqs_detail.rs  sqs_list.rs
