[package]
name = "bridgio"
version = "0.1.0"
edition = "2024"
description = "TUI browser for AWS SNS topics and SQS queues"
license = "MIT"
repository = "https://github.com/davidbayo10/bridgio"
homepage = "https://github.com/davidbayo10/bridgio"
authors = ["David Bayo Alcaide"]
keywords = ["aws", "sns", "sqs", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".github", "target"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.98.0"
aws-sdk-sqs = "1.97.0"
aws-types = "1.3.14"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
tokio = { version = "1.50.0", features = ["full"] }
